SFDC_LD_Packages/objects-layouts/main/default/objects/Zip_Code__c/Zip_Code__c.object-meta.xml
<CustomObject>
    <label>Zip Code</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>