SFDC_LD_Packages/objects-layouts/main/default/objects/Zip_Code__c/fields/Territory_Field__c.field-meta.xml
<CustomField>
    <fullName>Territory_Field__c</fullName>
    <label>Territory Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>