SFDC_LD_Packages/objects-layouts/main/default/objects/Zip_Code__c/fields/Territory_Inside__c.field-meta.xml
<CustomField>
    <fullName>Territory_Inside__c</fullName>
    <label>Territory Inside</label>
    <length>255</length>
    <type>Text</type>
</CustomField>