SFDC_LD_Packages/objects-layouts/main/default/objects/Zip_Code__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <externalId>true</externalId>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>